# EPOCH

./: .gitignore  CMakeLists.txt  README.md  package.json
docs/: agentic-revenue-handoff-contract.md  auth-session-role-readiness-contract.md  calendar-provider-go-live-readiness-gate.md  calendar-provider-handoff-invitation-contract.md  controlled-public-customer-access-gateway.md  curriculum-gameplan-framework.md  customer-account-history-contract.md  education-operating-platform-boundary.md  first-commercial-slice-checklist.md  integration-priority-ranking.md  library-ledger-sync-recovery-contract.md  local-integrated-product-shell.md  marketing-advertising-automation-plan.md  marketing-conversion-analytics-readiness-contract.md  monitor-parity-health-controls.md  notification-outbox-delivery-contract.md  notification-provider-handoff-template-consent-contract.md  payment-provider-handoff-invoice-checkout-contract.md  product-boundary.md  provider-adapter-selection-readiness-contract.md  quote-payment-readiness-contract.md  reminder-recurrence-availability-contract.md  revised-13-month-calendar-contract.md  runtime-and-packaging.md  sandbox-auth-provider-prototype-contract.md  sandbox-calendar-adapter-prototype-contract.md  sandbox-marketing-analytics-adapter-prototype-contract.md  sandbox-notification-provider-prototype-contract.md  sandbox-payment-provider-prototype-contract.md  synapse-route-placement-contract.md  v1-minimal-scheduling-surface.md  workshop-extraction-boundary.md
native/: epoch_app_bridge.c  epoch_app_bridge.h  epoch_app_bridge_smoke.c  epoch_core.c  (+2 more)
(+56 files in other folders)
